--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&subset=cyrillic,cyrillic-ext"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      crossorigin="anonymous"
-    />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
-    <title>Потрать всего 5 минут, мест осталось не много!</title>
-  </head>
 
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&subset=cyrillic,cyrillic-ext" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous" />
+  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+  <title>Потрать всего 5 минут, мест осталось не много!</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
